; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/freebsd_x86-64/dos/extr_44212.c_craftZone.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/freebsd_x86-64/dos/extr_44212.c_craftZone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ata_get_xport = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @craftZone(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8**, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8**, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = getelementptr i8, i8* %8, i64 200
  %10 = bitcast i8* %9 to i8**
  store i8** %10, i8*** %3, align 8
  %11 = load i8*, i8** %2, align 8
  %12 = getelementptr i8, i8* %11, i64 216
  %13 = bitcast i8* %12 to i8**
  store i8** %13, i8*** %4, align 8
  %14 = load i8*, i8** %2, align 8
  %15 = getelementptr i8, i8* %14, i64 232
  %16 = bitcast i8* %15 to i8**
  store i8** %16, i8*** %5, align 8
  %17 = load i8*, i8** %2, align 8
  %18 = getelementptr i8, i8* %17, i64 240
  %19 = bitcast i8* %18 to i8**
  store i8** %19, i8*** %6, align 8
  %20 = load i8*, i8** %2, align 8
  %21 = getelementptr i8, i8* %20, i64 248
  %22 = bitcast i8* %21 to i8**
  store i8** %22, i8*** %7, align 8
  %23 = load i8*, i8** @ata_get_xport, align 8
  %24 = load i8**, i8*** %3, align 8
  store i8* %23, i8** %24, align 8
  %25 = load i8*, i8** @ata_get_xport, align 8
  %26 = load i8**, i8*** %5, align 8
  store i8* %25, i8** %26, align 8
  %27 = load i8*, i8** @ata_get_xport, align 8
  %28 = load i8**, i8*** %6, align 8
  store i8* %27, i8** %28, align 8
  %29 = load i8*, i8** @ata_get_xport, align 8
  %30 = load i8**, i8*** %7, align 8
  store i8* %29, i8** %30, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
